# Launcher

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  _How to release a new version.md  changelog.md  main.cpp
.github/workflows/: build_and_run_tests.yml  create_launcher_installer.yml  release_installer.yml
Releases/: RELEASES  assets.win.json  releases.win.json
User data Default/: imgui.ini
app-resources/: Coollab-Launcher.entitlements
app-resources/Coollab-Launcher.AppDir/: AppRun
app-resources/Coollab-Launcher.AppDir/usr/share/applications/: Coollab-Launcher.desktop
app-resources/Coollab-Launcher.AppDir/usr/share/metainfo/: Coollab-Launcher.appdata.xml
app-resources/Coollab-Launcher.app/Contents/: Info.plist
src/: App.cpp  App.hpp  CoollabVersion.cpp  CoollabVersion.hpp  LauncherSettings.cpp  LauncherSettings.hpp  Path.cpp  Path.hpp  Project.cpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp  Release.cpp  Release.hpp  ReleaseManager.cpp  ReleaseManager.hpp  Status.hpp  Task_CheckForLongPathsEnabled.cpp  Task_CheckForLongPathsEnabled.hpp  Version.cpp  Version.hpp  download.cpp  download.hpp  extract_zip.cpp  extract_zip.hpp  extractor.cpp  extractor.hpp  handle_error.cpp  handle_error.hpp  main.cpp  make_http_request.cpp  make_http_request.hpp  release.cpp  release.hpp  release_manager.cpp  release_manager.hpp  suggest_dl_from_github.cpp  suggest_dl_from_github.hpp  utils.cpp  utils.hpp
src/DebugOptions/: generate_debug_options.py
src/LongPaths/: LongPathsChecker.cpp  LongPathsChecker.hpp  Task_CheckForLongPathsEnabled.cpp  Task_CheckForLongPathsEnabled.hpp
src/Project/: Project.cpp  Project.hpp  ProjectManager.cpp  ProjectManager.hpp
src/Version/: ProjectToOpenOrCreate.hpp  Task_FetchCompatibilityFile.cpp  Task_FetchCompatibilityFile.hpp  Task_FetchListOfVersions.cpp  Task_FetchListOfVersions.hpp  Task_FindVersionsAvailableOnline.cpp  Task_FindVersionsAvailableOnline.hpp  Task_InstallVersion.cpp  Task_InstallVersion.hpp  Task_LaunchVersion.cpp  Task_LaunchVersion.hpp  Task_UninstallUnusedVersions.cpp  Task_UninstallUnusedVersions.hpp  Task_WaitForDownloadUrlToInstallVersion.cpp  Task_WaitForDownloadUrlToInstallVersion.hpp  Version.cpp  Version.hpp  VersionCompatibility.cpp  VersionCompatibility.hpp  VersionManager.cpp  VersionManager.hpp  VersionName.cpp  VersionName.hpp  VersionRef.cpp  VersionRef.hpp  VersionToUpgradeTo.hpp  download.cpp  download.hpp  extract_zip.cpp  extract_zip.hpp  installation_path.cpp  installation_path.hpp  launch.cpp  launch.hpp  parse_compatibility_file_line.cpp  parse_compatibility_file_line.hpp
src/VersionCompatibility/: Task_FetchCompatibilityFile.cpp  Task_FetchCompatibilityFile.hpp  VersionCompatibility.cpp  VersionCompatibility.hpp  parse_compatibility_file_line.cpp  parse_compatibility_file_line.hpp
